Migrate ls aliases to use eza

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ export EDITOR=micro
 export MICRO_TRUECOLOR=1
 export CALCHISTFILE=$HOME/.cache/.calc_history
 export ELECTRON_OZONE_PLATFORM_HINT=wayland
-export LESS='-RFs --exit-follow-on-close --use-color -Dd+m -Du+4 -DM9 -DP13 -Ds+y -Dk+226232'
+export LESS='-RFs#10 --exit-follow-on-close --use-color -Dd+m -Du+4 -DM9 -DP13 -Ds+y -Dk+226232'
+export MERGEPROG='vscodium --wait --merge'
 
 export PYTHONPYCACHEPREFIX=$HOME/.cache/__pycache__
 
@@ -16,7 +17,7 @@ $HOME/python/libs/hwutils/hwutils/:$HOME/python/Projects/hwutils:\
 $HOME/python/Projects/hwutils/hwutils:$HOME/python/scripts/hass:\
 $HOME/python/scripts/bashhelpers/pacman:$HOME/python/custom/:\
 $HOME/.local/bin/hyperfine/scripts:$HOME/python/scripts/io:\
-$HOME/python/cython
+$HOME/python/cython:$HOME/python/rest/hass
 
 export PATH=$HOME/.dotfiles/:$HOME/scripts/:$HOME/scripts/graphing/:\
 $HOME/scripts/git_scripts/:$HOME/.local/bin:$HOME/scripts/shutdown:\
@@ -45,7 +46,7 @@ export MOZ_ENABLE_WAYLAND=1
 # export QSG_RENDERER_LOOP=basics
 # export QT_ENABLE_HIGHDPI_SCALING=1
 export QT_PLUGIN_PATH=/usr/lib/qt/plugins:/usr/lib/qt6/plugins
-export QT_QPA_PLATFORM=wayland
+export QT_QPA_PLATFORM="wayland;xcb"
 
 # NVIDIA
 export SDL_VIDEO_FULLSCREEN_HEAD=1
