--- a/ruff.toml
+++ b/ruff.toml
@@ -32,7 +32,7 @@ exclude = [
     "**/TODO/kitty",
 ]
 cache-dir = "~/.cache/ruff"
-line-length = 100
+line-length = 90
 indent-width = 4
 target-version = "py312"
 # Tespect gitignore
@@ -73,7 +73,7 @@ docstring-code-format = true
 docstring-code-line-length = "dynamic"
 
 [lint]
-select = ["E", "F", "C", 'W', "B", "UP", "D107", "D104","D301","D401","D400","ANN201", "ANN206", "S103", "S105", "S112", "S110", "A", "EXE", "PIE", "RET", "SIM", "PLR", "PLW", "RUF","D406","FBT","PERF","D212"] # 'D' Django, 'ANN' annotations, 'S' built-ins, 'A', 'EXE', 'PIE', 'RET', 'SIM', 'PLR', 'PLW', 'RUF' ruff-lint ,'C' codesmell, 'E' convention, 'F' error, 'B' bug, 'UP' unused variables, 'W' warning.
+select = ["E", "F", "C", 'W', "B", "UP", "D107", "D104","D301","D401","D400","ANN201", "ANN206", "S103", "S105", "S112", "S110", "A", "EXE", "PIE", "RET", "SIM", "PLR", "PLW", "RUF","D406","FBT","PERF","D212", "DOC501", "TRY003", "EM102",] # 'D' Django, 'ANN' annotations, 'S' built-ins, 'A', 'EXE', 'PIE', 'RET', 'SIM', 'PLR', 'PLW', 'RUF' ruff-lint ,'C' codesmell, 'E' convention, 'F' error, 'B' bug, 'UP' unused variables, 'W' warning.
 exclude = ["*test*.py", '*.pyx']
 fixable = ['ALL']
 
@@ -128,8 +128,8 @@ combine-as-imports = true
 [lint.pycodestyle]
 max-line-length = 100 # E501 reports lines that exceed the length of 100.
 
-# [lint.pydocstyle]
-# convention = "google"  # Accepts: "google", "numpy", or "pep257".
+[lint.pydocstyle]
+convention = "google"  # Accepts: "google", "numpy", or "pep257".
 
 
 # Lint Reference:
