Modify filepath for sourcing api secrets

--- a/.env
+++ b/.env
@@ -87,10 +87,9 @@ export USE_EMOJI=false # pipx
 [[ -f $HOME/.bash_functions ]] && . $HOME/.functions
 [[ -f $HOME/.dotfiles/.bash_functions ]] && . $HOME/.dotfiles/.bash_functions
 
-
 # --------------------------------------------------------------- #
 
-#fastfetch --color 32 -c $HOME/.config/fastfetch/others/compact-mod.jsonc
-#printf "\033[97m%-*s\033[0m\033[31m FAILED\033[0m \033[33m@ %*s\033[0m\033[15;35m %-*s\033[0m\n" 10 ".shellrc" 2 "line 61:" 10 "xbindkeys" >> /var/spool/mail/joona/scripts.log
+# Private constant variables like API keys/tokens
+[[ -f $HOME/.dotfiles/.secrets ]] && source "$HOME/.dotfiles/.secrets"
 
 
